--- a/Marwari-Church-Mirpurkhas.html
+++ b/Marwari-Church-Mirpurkhas.html
@@ -127,6 +127,18 @@
     </p>
   </section>
 
+ <section id="gallery">
+  <h2>Church Gallery</h2>
+  <p>Moments of worship, fellowship, and community life at Marwari Baptist Church.</p>
+
+  <div class="gallery">
+    <img src="church1.jpg" alt="Church Service">
+    <img src="church2.jpg" alt="Prayer Meeting">
+    <img src="church3.jpg" alt="Church Building">
+    <img src="event1.jpg" alt="Special Event">
+  </div>
+</section>
+
   <section id="contact">
     <h2>Contact Us</h2>
     <p>
