--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marwari Baptist Church | Marvi Town, Mirpurkhas</title>
+  <title>Marwari  Church Mirpurkhas | Marvi Town, Mirpurkhas</title>
   <style>
     body {
       margin: 0;
@@ -72,7 +72,7 @@
 <body>
 
   <header>
-    <h1>Marwari Baptist Church</h1>
+    <h1>Marwari  Church Mirpurkhas</h1>
     <p>Marvi Town, Mirpurkhas, Sindh – Pakistan</p>
     <p><em>Founded in honor of Damji Philip (Pioneer Marwari Christian)</em></p>
   </header>
@@ -87,7 +87,7 @@
   <section id="about">
     <h2>About the Church</h2>
     <p>
-      Marwari Baptist Church, located in Marvi Town, Mirpurkhas, is a place of worship, prayer, and fellowship for the Christian community. The church was established to serve believers from the Marwari community and beyond, nurturing faith, unity, and spiritual growth.
+      Marwari  Church Mirpurkhas, located in Marvi Town, Mirpurkhas, is a place of worship, prayer, and fellowship for the Christian community. The church was established to serve believers from the Marwari community and beyond, nurturing faith, unity, and spiritual growth.
     </p>
     <p>
       The church stands as a living testimony of faith, perseverance, and obedience to God, continuing its mission to share the Gospel and serve the local community with love and humility.
@@ -130,7 +130,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <p>
-      <strong>Marwari Baptist Church</strong><br />
+      <strong>Marwari  Church Mirpurkhas</strong><br />
       Marvi Town, Mirpurkhas<br />
       Sindh, Pakistan
     </p>
@@ -140,7 +140,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2026 Marwari Baptist Church, Mirpurkhas. All rights reserved.</p>
+    <p>&copy; 2026 Marwari  Church Mirpurkhas, Mirpurkhas. All rights reserved.</p>
     <p>"But as for me and my house, we will serve the Lord." – Joshua 24:15</p>
   </footer>
 
