Add responsive styles for header elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
       padding: 50px 20px;
       text-align: center;
     }
+    
+    header h1 {
+      font-size: clamp(2rem, 6vw, 3.5rem);
+      margin: 0 0 10px;
+      letter-spacing: 1px;
+    }
 
+    header p {
+      font-size: clamp(1rem, 2.5vw, 1.125rem);
+      margin: 0.25rem 0;
+    }
+    
     nav {
       background: #2f4f4f;
       padding: 12px;
