--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 <body>
 
 <header>
-  <h1>Marwari Church</h1>
-  <p>Marvi Town, Mirpurkhas, Sindh – Pakistan</p>
+  <h1>Marwari Church Mirpurkhas</h1>
+  <p>Marvi Town, Sanghar road Mirpurkhas, Sindh – Pakistan</p>
   <p><em>In memory of Rev. Damji Philip (Pioneer Marwari Christian)</em></p>
 </header>
 
@@ -175,7 +175,7 @@
 <section id="pioneer">
   <h2>Rev. Damji Philip (1920–2006)</h2>
   <p>Damji Philip was among the first from the Marwari community to embrace Christianity in 1940. His faith shaped generations.</p>
-  <p>The church was established by his youngest son, <strong>Rev. Rajan Victor</strong>.</p>
+  <p>The church building was built by his youngest son, <strong>Rev. Rajan Victor</strong>.</p>
 </section>
 
 <section id="gallery">
@@ -211,16 +211,16 @@
 <section id="contact">
   <h2>Contact Us</h2>
   <p><strong>Marwari Church</strong><br>Marvi Town, Mirpurkhas, Sindh</p>
-  <iframe src="https://maps.google.com/maps?q=Mirpurkhas%20Sindh&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="300"></iframe>
+  <iframe src="https://www.google.com/maps/place/Baptist+church+Marvi+town/@25.5421378,69.0274889,680m/data=!3m2!1e3!4b1!4m6!3m5!1s0x394ead0073cb0993:0x7b4764140635b90!8m2!3d25.5421378!4d69.0300638!16s%2Fg%2F11yv3qn1kl?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300"></iframe>
   <a class="btn" href="history.pdf">Download Church History (PDF)</a>
 </section>
 
 <footer>
-  <p>&copy; 2026 Marwari Church, Mirpurkhas, Sindh</p>
+  <p>&copy; Page powered by: Ronald</p>
   <p>"As for me and my house, we will serve the Lord." – Joshua 24:15</p>
 </footer>
 
-<a class="whatsapp" href="https://wa.me/923XXXXXXXXX" target="_blank">WhatsApp Us</a>
+<a class="whatsapp" href="https://wa.me/923068266119" target="_blank">WhatsApp Us</a>
 
 <div class="lightbox" id="lightbox" onclick="closeLightbox()">
   <img id="lightbox-img">
