Replace Google Maps iframe with Google Maps link

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section id="contact">
   <h2>Contact Us</h2>
   <p><strong>Marwari Church</strong><br>Marvi Town, Mirpurkhas, Sindh</p>
-  <iframe src="https://www.google.com/maps/place/Baptist+church+Marvi+town/@25.5421378,69.0274889,680m/data=!3m2!1e3!4b1!4m6!3m5!1s0x394ead0073cb0993:0x7b4764140635b90!8m2!3d25.5421378!4d69.0300638!16s%2Fg%2F11yv3qn1kl?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300"></iframe>
+  <iframe src="https://maps.app.goo.gl/krWHMeFm17RXisDD6" width="100%" height="300"></iframe>
   <a class="btn" href="history.pdf">Download Church History (PDF)</a>
 </section>
 
