--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section id="contact">
   <h2>Contact Us</h2>
   <p><strong>Marwari Church</strong><br>Marvi Town, Mirpurkhas, Sindh</p>
-  <iframe src="https://maps.app.goo.gl/krWHMeFm17RXisDD6" width="100%" height="300"></iframe>
+  <iframe src="https://www.google.com/maps/embed?origin=mfe&pb=!1m3!2m1!1sMirpurkhas+Sindh!6i13" width="100%" height="300"></iframe>
   <a class="btn" href="history.pdf">Download Church History (PDF)</a>
 </section>
 
