Add biography of Damji Philip
Added a biography section for Damji Philip, detailing his life, faith, and legacy within the Marwari Christian community.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,74 @@
 </section>
 
 <section id="pioneer">
+  <section id="damji-biography">
+  <h2>In Loving Memory of Damji Philip (1920–2006)</h2>
+  <p><em>Pioneer of Faith among the Marwari Christians of Sindh</em></p>
+
+  <p>
+    Damji Philip was a man whose life reflected quiet strength, deep conviction,
+    and unwavering faith in God. Born in 1920, he lived during a time of great
+    social and spiritual change, yet remained steadfast in his walk with the Lord.
+    He is remembered as a pioneer of the Christian faith among the Marwari
+    community of Sindh, Pakistan, and as a faithful servant whose legacy continues
+    to inspire generations.
+  </p>
+
+  <h3>A Life Rooted in Heritage and Discipline</h3>
+  <p>
+    Born into the Marwari community, Damji Philip grew up within a culture known
+    for strong traditions and close family bonds. During the British Raj, he served
+    as an official in the British-era police force, a role that required integrity,
+    courage, and discipline. These values shaped his character and later guided
+    his life of faith, service, and leadership within his family and community.
+  </p>
+
+  <h3>A Courageous Step of Faith</h3>
+  <p>
+    In 1940, while still in government service, Damji Philip made a courageous and
+    life-changing decision to embrace Christianity. This step was taken during a
+    period of significant social and religious transformation in the Indian
+    subcontinent. His acceptance of Christ marked a historic moment for the
+    Marwari community in Sindh.
+  </p>
+  <p>
+    His conversion was not merely a change of belief but a complete surrender to
+    God’s calling. Through prayer, obedience, and a life of quiet testimony, his
+    faith became a guiding light for his family and for others who would follow
+    the same path.
+  </p>
+
+  <h3>A Spiritual Legacy That Endures</h3>
+  <p>
+    The spiritual seeds planted by Damji Philip bore lasting fruit. To honor his
+    unwavering faith and devotion, his youngest son, <strong>Rev. Rajan Victor</strong>,
+    established the <strong>Damji Philip Church</strong> in Marvi Town, Mirpurkhas.
+    This church continues to serve as an active place of worship and stands as a
+    living memorial to his faith and obedience to God.
+  </p>
+
+  <h3>A Faith Passed Through Generations</h3>
+  <p>
+    Damji Philip passed away in November 2006 at the age of 86. He left behind a
+    spiritual heritage carried forward by his three sons: <strong>Stephen,
+    Anthony, and Rajan Victor</strong>. His grandson, <strong>Ronald</strong>,
+    continues to preserve and document the family’s history, ensuring that his
+    grandfather’s life and testimony are remembered by future generations.
+  </p>
+
+  <h3>Remembered with Gratitude and Hope</h3>
+  <p>
+    Damji Philip is remembered as a humble pioneer who faithfully bridged his
+    Marwari heritage with his Christian identity. His life stands as a testimony
+    of courage, perseverance, and trust in the Lord.
+  </p>
+
+  <blockquote>
+    “The righteous person will be remembered forever.”<br>
+    <strong>— Psalm 112:6</strong>
+  </blockquote>
+</section>
+
   <h2>Rev. Damji Philip (1920–2006)</h2>
   <p>Damji Philip was among the first from the Marwari community to embrace Christianity in 1940. His faith shaped generations.</p>
   <p>The church building was built by his youngest son, <strong>Rev. Rajan Victor</strong>.</p>
