--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+. <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -174,7 +174,7 @@
 
 <section id="pioneer">
   <section id="damji-biography">
-  <h2>In Loving Memory of Damji Philip (1920–2006)</h2>
+  <h2>In Loving Memory of Rev. Damji Philip (1920–2006)</h2>
   <p><em>Pioneer of Faith among the Marwari Christians of Sindh</em></p>
 
   <p>
