Revise description of Damji Philip Church legacy

--- a/index.html
+++ b/index.html
@@ -212,11 +212,7 @@
 
   <h3>A Spiritual Legacy That Endures</h3>
   <p>
-    The spiritual seeds planted by Damji Philip bore lasting fruit. To honor his
-    unwavering faith and devotion, his youngest son, <strong>Rev. Rajan Victor</strong>,
-    established the <strong>Damji Philip Church</strong> in Marvi Town, Mirpurkhas.
-    This church continues to serve as an active place of worship and stands as a
-    living memorial to his faith and obedience to God.
+The story of the <strong>Damji Philip Church</strong> is one of faith, perseverance, and divine providence. It begins with <strong>Damji Philip</strong>, a man whose life was marked by unwavering devotion to God. Through his steadfast obedience and tireless service, he planted spiritual seeds that have borne fruit across generations. His example of living faith became a foundation upon which others could build their own walk with Christ. </p> <p> To honor this remarkable legacy, his youngest son, <strong>Rev. Rajan Victor</strong>, established the <strong>Damji Philip Church</strong> in <em>Marvi Town, Mirpurkhas</em>. From its earliest days, the church was envisioned not as a monument of stone, but as a living testimony to the power of faith and the enduring grace of God.
   </p>
 
   <h3>A Faith Passed Through Generations</h3>
