Enhance tribute to Damji Philip and church legacy
Expanded the narrative about Damji Philip and the church's legacy, emphasizing faith and community support.

--- a/index.html
+++ b/index.html
@@ -178,12 +178,30 @@
   <p><em>Pioneer of Faith among the Marwari Christians of Sindh</em></p>
 
   <p>
-    Damji Philip was a man whose life reflected quiet strength, deep conviction,
-    and unwavering faith in God. Born in 1920, he lived during a time of great
-    social and spiritual change, yet remained steadfast in his walk with the Lord.
-    He is remembered as a pioneer of the Christian faith among the Marwari
-    community of Sindh, Pakistan, and as a faithful servant whose legacy continues
-    to inspire generations.
+  The story of the <strong>Damji Philip Church</strong> is one of faith, perseverance,
+  and divine providence. It begins with <strong>Damji Philip</strong>, a man whose life
+  was marked by unwavering devotion to God. Through his steadfast obedience and
+  tireless service, he planted spiritual seeds that have continued to bear fruit
+  across generations. His life of faith became a foundation upon which many have
+  built their own walk with Christ.
+</p>
+
+<p>
+  To honor this sacred legacy, his youngest son, <strong>Rev. Rajan Victor</strong>,
+  established the <strong>Damji Philip Church</strong> in <em>Marvi Town, Mirpurkhas</em>.
+  From its earliest days, the church has continued its mission without external
+  support, sustained only by faith, prayer, and the grace of God. It was never
+  envisioned as a monument of stone, but as a living testimony to God’s faithfulness
+  and the power of a believing community.
+</p>
+
+<p>
+  Despite limited resources, the church continues to stand and serve, guided by
+  the Lord and strengthened by the commitment of its members. Its ongoing witness
+  is a reminder that God’s work does not depend on human support, but on hearts
+  fully surrendered to His will.
+</p>
+
   </p>
 
   <h3>A Life Rooted in Heritage and Discipline</h3>
