--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ The story of the <strong>Damji Philip Church</strong> is one of faith, persevera
 </section>
 
 <footer>
-  <p>&copy; Page powered by: Ronald</p>
+  <p>&copy; Page powered by: Ronald (Grandson of Rev. Damji Philip)</p>
   <p>"As for me and my house, we will serve the Lord." – Joshua 24:15</p>
 </footer>
 
