--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
   <style>
     body {
-      <header class="hero">
-  <img src="header.jpg" alt="Church Banner">
-  <div class="hero-text">
-    <h1>Marwari Church, Mirpurkhas</h1>
-    <p>A place of Worship, Faith, and Fellowship</p>
-  </div>
-</header>
+            margin: 0;
+      font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
+      line-height: 1.6;
+      background: #f4f6f5;
+      color: #333;
     }
 
     header {
