--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
       font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
       line-height: 1.6;
-      background: #f4f6f5;
+      background: header.jpg;
       color: #333;
     }
 
